[package]
name = "egui-multiwin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.15.0", features = ["single_threaded"] }
egui_glow = { version = "0.15.0", features = ["clipboard", "default_fonts", "links"]}
glow = "0.11"
glutin = "0.27"
memoffset = "0.6"
image = { version = "0.23", default-features = false, features = ["png"] }
thiserror = "1.0"
enum_dispatch = "0.3.7"


[dev-dependencies]