[package]
name = "egui-multiwin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.19.0" }
egui_glow = { version = "0.19.0", features = ["clipboard", "winit", "links"]}
glow = "0.11"
glutin = "0.29.1"
image = { version = "0.24.3", default-features = false, features = ["png"] }
thiserror = "1.0"
enum_dispatch = "0.3.7"


[dev-dependencies]